Fix: slider-controls always visible in ie9- In such browsers the opacity+transition doesn't really work fine, let's make them always visible.

--- a/inc/assets/less/tc_custom.less
+++ b/inc/assets/less/tc_custom.less
@@ -1602,6 +1602,7 @@ footer#footer .colophon .social-block a {
   width: 10%;
   opacity: 0;
   color: #999;
+  z-index: 10;
 }
 .tc-slid-hover .tc-slider-controls {
   opacity: 1;
